# sponsorblock

./: .gitignore  COPYING  Cargo.toml  README.md
lib/api-types/: Cargo.toml  README.md
lib/api-types/src/: lib.rs
lib/api-types/src/da/: get_thumbnail.rs  mod.rs
lib/api-types/src/da/branding/: get.rs  get_hash.rs  post.rs
lib/api-types/src/sb/: add_user_as_temp_vip.rs  add_user_as_vip.rs  clear_cache.rs  feature.rs  get_days_saved_formatted.rs  get_saved_time_for_user.rs  get_top_category_users.rs  get_top_users.rs  get_total_stats.rs  get_username.rs  get_video_sponsor_times.rs  get_views_for_user.rs  is_user_vip.rs  lock_reason.rs  mod.rs  post_video_sponsor_times.rs  purge_all_segments.rs  search_segments.rs  segment_info.rs  segment_shift.rs  set_username.rs  shadow_ban_user.rs  status.rs  user_id.rs  user_info.rs  user_stats.rs  viewed_video_sponsor_time.rs  vote_on_sponsor_time.rs  warn_user.rs
lib/api-types/src/sb/lock_categories/: delete.rs  get.rs  get_hash.rs  mod.rs  post.rs
server/api-server/: Cargo.toml  README.md
server/api-server/images/alpine/: Dockerfile
server/api-server/images/distroless/: Dockerfile
server/api-server/src/: main.rs
server/api-server/src/routes/: add_user_as_temp_vip.rs  add_user_as_vip.rs  clear_cache.rs  feature.rs  get_days_saved_formatted.rs  get_saved_time_for_user.rs  get_top_users.rs  get_total_stats.rs  get_username.rs  get_views_for_user.rs  is_user_vip.rs  lock_reason.rs  mod.rs  purge_all_segments.rs  search_segment.rs  segment_info.rs  segment_shift.rs  set_username.rs  shadow_ban_user.rs  user_id.rs  user_info.rs  user_stats.rs  viewed_video_sponsor_time.rs  vote_on_sponsor_time.rs  warn_user.rs
server/lib/diesel-sponsor/: Cargo.toml  README.md
server/lib/diesel-sponsor/scripts/: models.sh
server/lib/diesel-sponsor/src/: models.rs  schema.rs
(+37 files in other folders)
