[package]
name = "sb-api-types"
description = "SponsorBlock api types"
version = "0.1.0"
authors = ["Tristan <tristan@tnet.moe>"]
repository = "https://github.com/tnetmoe/sponsorblock"
edition = "2021"
license = "LGPL-3.0-only"
readme = "README.md"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
