[package]
name = "sb-api-server"
version = "0.1.0"
description = "SponsorBlock api server"
authors = ["Tristan <tristan@tnet.moe>"]
edition = "2021"
repository = "https://github.com/tnetmoe/sponsorblock"

[[bin]]
name = "sb-api-server"
path = "src/main.rs"

[dependencies]
sb-api-types = { path = "../../lib/api-types" }
axum = "0.7.5"
tokio = {version = "1.38.0", features = ["rt-multi-thread"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"